--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -38,7 +38,7 @@
 		<div class="item item-text-wrap">
 			<h3 class = "title-card">Wilz Carro</h3>
 			No estás inscrito en ningún viaje.
-			<button class="button button-block button-positive">
+			<button class="button button-block button-positive" ui-sref = "app.viajes">
 				Ver viajes
 			</button>
 		</div>
@@ -48,7 +48,7 @@
 		<div class="item item-text-wrap">
 			<h3 class = "title-card">Wilz Van</h3>
 			No has aparatado tu cupo en ninguna ruta.
-			<button class="button button-block button-positive">
+			<button class="button button-block button-positive" ui-sref = "app.rutas">
 				Ver rutas
 			</button>
 		</div>
