--- a/www/css/style.css
+++ b/www/css/style.css
@@ -24,6 +24,31 @@
 	display: block;
 }
 
+.costo-ruta{
+	font-weight: 700;
+	font-size: 15px;
+	color: #bbbbbb;
+	display: block;
+}
+
+.costo-descr{
+	font-weight: 500;
+	font-size: 12px;
+	color: #777777;
+	display: block;
+}
+
+.ruta-van-div{
+	font-size: 12px;
+	padding-left: 10px;
+	padding-right: 10px;
+	background-color: #f8f8f8;
+	border-radius: 2px;
+	padding-top: 7px;
+	padding-bottom: 7px;
+	border: 1px solid #e9e9e9;
+}
+
 .hora-caravana{
 	font-weight: 500;
 	font-size: 14px;
@@ -101,7 +126,7 @@
 	font-weight: 700;
 	font-size: 12px;
 	letter-spacing: 1px;
-	margin-top: -16px;
+	margin-top: -5px;
 	margin-right: -12px;
 	color: #2ecc71;
 }
@@ -138,6 +163,34 @@
 	color: #0E234F;
 	font-size: 40px;
 	text-align: center;
+}
+
+.item{
+	padding-top: 5px !important;
+}
+
+.titulo-esperando{
+	text-align: center;
+	font-size: 20px;
+	color: #333333;
+	margin-top: 180px !important;
+}
+
+.subtitulo-esperando{
+	margin-top: 30px;
+	text-align: center;
+	font-size: 16px;
+	font-weight: 700;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+	color: #aaaaaa;
+}
+
+.icon-esperalo{
+	margin-top:40px;
+	text-align: center;
+	color: #666666;
+	font-size: 20px;
 }
 
 @media(max-width: 320px){
