--- a/www/templates/rutas.html
+++ b/www/templates/rutas.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Rutas">
   <ion-content>
-     	<div class="card" ng-repeat="ruta in rutas" href="#/app/rutas/{{ruta.id}}">
+     	<div class="card" ng-repeat="ruta in rutas">
      		<div class="item item-text-wrap">
 				<div class = "row">
 					<div class = "col col-25 fecha-div">
