--- a/www/css/style.css
+++ b/www/css/style.css
@@ -193,6 +193,69 @@
 	font-size: 20px;
 }
 
+.recuerda{
+	font-size: 12px;
+	color: #aaaaaa;
+	padding: 6px;
+	padding-left: 10px;
+	background-color: #eeeeee;
+	border-radius: 4px;
+	text-align: left;
+	margin-top: 10px;
+}
+
+.instr-registro{
+	margin-bottom: 20px;
+
+	text-align: center;
+}
+
+.registro-lbl{
+	text-transform: uppercase;
+	font-weight: 700;
+	font-size: 11px;
+	letter-spacing: 1px;
+	color: #333333;
+	display: block;
+}
+
+.img-login{
+	text-align: center;
+	margin-bottom: 30px;
+	margin-top: 90px;
+}
+
+.img-signup{
+	text-align: center;
+	margin-bottom: 30px;
+	margin-top: 10px;
+}
+
+.error-lbl{
+	color: #e40b0b;
+	text-align: center;
+}
+
+.img-login img,.img-signup img{
+	width: 20%;
+	height: auto;
+}
+
+.lbl-signup{
+	text-align: center;
+	margin-top: 40px;
+}
+
+.lbl-signup a{
+	color: #333333;
+}
+
+.button-wilz{
+	background-color: #d43761;
+	border:none;
+	color: white;
+}
+
 @media(max-width: 320px){
 
 .dia-caravana{
