--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -28,7 +28,7 @@
 			
 			<span ng-show="!hayServiciosBici()">No te has unido a ninguna caravana.</span>
 			
-			<a class="button button-block button-positive" ui-sref = "app.caravanas">
+			<a class="button button-block button-wilz" ui-sref = "profile.caravanas">
 				Ver caravanas
 			</a>
 		</div>
@@ -38,7 +38,7 @@
 		<div class="item item-text-wrap">
 			<h3 class = "title-card">Wilz Carro</h3>
 			No estás inscrito en ningún viaje.
-			<button class="button button-block button-positive" ui-sref = "app.viajes">
+			<button class="button button-block button-wilz" ui-sref = "profile.viajes">
 				Ver viajes
 			</button>
 		</div>
@@ -48,7 +48,7 @@
 		<div class="item item-text-wrap">
 			<h3 class = "title-card">Wilz Van</h3>
 			No has aparatado tu cupo en ninguna ruta.
-			<button class="button button-block button-positive" ui-sref = "app.rutas">
+			<button class="button button-block button-wilz" ui-sref = "profile.rutas">
 				Ver rutas
 			</button>
 		</div>
