--- a/www/templates/caravanasHome.html
+++ b/www/templates/caravanasHome.html
@@ -27,12 +27,16 @@
   						</div>
   					</div>
   				</div>
+          <a class="button button-block button-wilz-empty" ng-click="showConfirm(caravanaLider.id)" >
+          Empezar recorrido
+        </a>
           <hr class = "light-hr">
 </div>
             
 				<a class="button button-block button-wilz" ng-click="openModal()" >
 					Publicar caravana
 				</a>
+        
 			</div>
 		</div>
   </ion-content>
