--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -26,7 +26,7 @@
 				</div>
 			</div>
 			
-			<span ng-show="!hayServiciosBici()">No te has unido a ninguna caravana.</span>
+			<!--span ng-show="!hayServiciosBici()">No te has unido a ninguna caravana.</span-->
 			
 			<a class="button button-block button-wilz" ui-sref = "profile.caravanasComunidad">
 				Ver caravanas
@@ -34,16 +34,6 @@
 			<a class="button button-block button-wilz-empty" ui-sref = "profile.caravanashome">
 				Publicar caravanas
 			</a>
-		</div>
-	</div>
-
-	<div class="card">
-		<div class="item item-text-wrap">
-			<h3 class = "title-card">Wilz Carro</h3>
-			No estás inscrito en ningún viaje.
-			<button class="button button-block button-wilz" ui-sref = "showmap">
-				Ver viajes
-			</button>
 		</div>
 	</div>
 
