--- a/www/css/style.css
+++ b/www/css/style.css
@@ -318,6 +318,28 @@
 	padding-right: 40px;
 }
 
+.ionic-datepicker .item{
+	padding-top: 13px !important;
+}
+
+.ionic-datepicker-div .button, .ionic-timepicker-div .button{
+	    text-align: left;
+    font-size: 14px;
+    color: #aaaaaa;
+    padding-left: 16px;
+    border: 1px solid #dddddd;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+.ionic-timepicker-div .button{
+	margin-top: -1px;
+	}
+
+.formulario-caravana{
+	margin-bottom: 0px;
+}
+
 @media(max-width: 320px){
 
 	.dia-caravana{
