--- a/www/templates/caravanasHome.html
+++ b/www/templates/caravanasHome.html
@@ -12,7 +12,7 @@
             <span class = "num-inscritos">0</span>
   					<div class = "col col-25 fecha-div">
   						<span class = "dia-caravana">{{caravanaLider.dia}}{{caravanaLider.mes}}</span>
-  						<span class = "hora-caravana">{{caravanaLider.hora}}:{{caravanaLider.min}}AM</span>
+  						<span class = "hora-caravana">{{caravanaLider.hora}}:{{caravanaLider.min}}</span>
   					</div>
   					<div class = "col col-75">
   						<div class = "recorrido-div">
