--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -32,7 +32,7 @@
 				Ver caravanas
 			</a>
 			<a class="button button-block button-wilz-empty" ui-sref = "profile.caravanashome">
-				Publicar caravanas
+				Tus caravanas
 			</a>
 		</div>
 	</div>
@@ -43,6 +43,15 @@
 			No has aparatado tu cupo en ninguna ruta.
 			<button class="button button-block button-wilz" ui-sref = "profile.rutas">
 				Ver rutas
+			</button>
+		</div>
+	</div>
+
+	<div class="card">
+		<div class="item item-text-wrap">
+			<h3 class = "title-card">Ciclorutas</h3>
+			<button class="button button-block button-wilz-empty" ui-sref = "ciclorutas">
+				Ver ciclorutas
 			</button>
 		</div>
 	</div>
